apps/homarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: http
      name: http
